[gd_scene load_steps=9 format=3 uid="uid://dot7kfcnwtv41"]

[ext_resource type="PackedScene" uid="uid://fpy0fgxfs1wc" path="res://scenes/menus/menu_overlay.tscn" id="1_4siqv"]
[ext_resource type="Script" path="res://scenes/menus/win_menu.gd" id="1_hwblf"]
[ext_resource type="Texture2D" uid="uid://cospdmt0e1gh1" path="res://sprites/score-sheet.png" id="2_10fnf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cuqdk"]
atlas = ExtResource("2_10fnf")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_641ns"]
atlas = ExtResource("2_10fnf")
region = Rect2(48, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuhtn"]
atlas = ExtResource("2_10fnf")
region = Rect2(96, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ke7t"]
atlas = ExtResource("2_10fnf")
region = Rect2(144, 0, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_llvfs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuqdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_641ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuhtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ke7t")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="WinMenu" instance=ExtResource("1_4siqv")]
script = ExtResource("1_hwblf")

[node name="NextLevelButton" type="Button" parent="." index="1"]
z_index = 15
layout_mode = 0
offset_left = 136.0
offset_top = 96.0
offset_right = 200.0
offset_bottom = 120.0
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="." index="2"]
z_index = 15
layout_mode = 0
offset_left = 56.0
offset_top = 96.0
offset_right = 120.0
offset_bottom = 120.0
text = "Main Menu"

[node name="WinLabel" type="Label" parent="." index="3"]
z_index = 15
layout_mode = 0
offset_left = 48.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 88.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Good Job! You did it with X shots and Y mirrors!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Score" type="AnimatedSprite2D" parent="." index="4"]
z_index = 15
position = Vector2(128, 80)
sprite_frames = SubResource("SpriteFrames_llvfs")

[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
